feat(webapp): Create line charts

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,7 +23,6 @@
 	},
 	"dependencies": {
 		"@flaticon/flaticon-uicons": "^3.3.1",
-		"apexcharts": "^4.1.0",
-		"svelte-apexcharts": "^1.0.2"
+		"apexcharts": "^4.1.0"
 	}
 }
