--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+backend/socials_api/.env
+backend/composer.json
+backend/composer.lock
+backend/vendor
+backend/.env
