fix(devops): Use sveltekit build folder

--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -2,12 +2,7 @@ FROM node:18 AS builder
 
 WORKDIR /app
 
-COPY package*.json ./
-COPY svelte.config.js ./
-COPY vite.config.js ./
-COPY src ./src
-COPY static ./static
-COPY tsconfig.json ./
+COPY . .
 
 RUN npm install
 
@@ -17,7 +12,7 @@ FROM node:18
 
 WORKDIR /app
 
-COPY --from=builder /app/build ./build
+COPY --from=builder /app/.svelte-kit/output ./build
 COPY package*.json ./
 
 RUN npm install --only=production
